--- a/js_app/public/index.html
+++ b/js_app/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -23,9 +22,39 @@
             </div>
             <video class="video-player" id="remote-video" autoplay playsinline controls></video>
         </div>
+        <form class="row" id="messages-form">
+            <div class="col-6">
+                <input id="user-message" type="text" placeholder="Enter message here" />
+            </div>
+            <div class="col-2">
+                <input class="btn btn-primary" type="submit" value="Send Message!" />
+            </div>
+        </form>
+        <div class="col-12">
+            <ul id="messages">
+                <!-- Starts empty, populated by Socket.io and JavaScript -->
+            </ul>
+        </div>        
     </div>
+    <!---
+    <div class="container text-center">
+        <form class="row" id="messages-form">
+            <div class="col-6">
+                <input id="user-message" type="text" placeholder="Enter message here" />
+            </div>
+            <div class="col-2">
+                <input class="btn btn-primary" type="submit" value="Send Message!" />
+            </div>
+        </form>
+        <div class="col-12">
+            <ul id="messages">
+                <!-- Starts empty, populated by Socket.io and JavaScript --\>
+            </ul>
+        </div>        
+    </div>
+        --->
+    <script src="/socket.io/socket.io.min.js"></script>
+    <script src="scripts.js"></script>    
+    <script src='socketListeners.js'></script>
 </body>
-<script src="/socket.io/socket.io.js"></script>
-<script src='scripts.js'></script>
-<script src='socketListeners.js'></script>
 </html>
